--- a/src/devtools/client/themes/variables.css
+++ b/src/devtools/client/themes/variables.css
@@ -335,3 +335,49 @@
   --theme-contrast-color: white;
   --theme-contrast-border: var(--yellow-65);
 }
+
+/* Z-index scale */
+
+/* Z-index values should always be defined in #app. This allows us to at a glance determine
+relative layers of our application and prevents bugs arising from arbitrary z-index values. */
+
+/* Whenever possible, we should rely on the element stack order instead of z-index. If you're
+certain that you **have** to use a z-index (e.g. element with position: absolute/fixed), define a
+custom variable for it below so we can keep track of everything in one place. */
+
+#app {
+  --z-index-1: 100;
+  --z-index-2: 200;
+  --z-index-3: 300;
+  --z-index-4: 400;
+  --z-index-5: 500;
+  --z-index-6: 600;
+  --z-index-7: 700;
+  --z-index-8: 800;
+  --z-index-9: 900;
+  --z-index-10: 1000;
+}
+
+#app {
+  --z-index-1--paused-comment: var(--z-index-1);
+  --z-index-1--paused-message: var(--z-index-1);
+
+  --z-index-2--name: var(--z-index-2);
+  --z-index-3--name: var(--z-index-3);
+  --z-index-4--name: var(--z-index-4);
+  --z-index-5--name: var(--z-index-5);
+  --z-index-6--name: var(--z-index-6);
+
+  --z-index-6--mask: var(--z-index-6);
+
+  --z-index-7--error: var(--z-index-7);
+  --z-index-7--modal: var(--z-index-7);
+  --z-index-7--dropdown: var(--z-index-7);
+
+  --z-index-8--mask: var(--z-index-8);
+
+  --z-index-9--modal-error: var(--z-index-9);
+  --z-index-9--dropdown-error: var(--z-index-9);
+
+  --z-index-10--fatal-error: var(--z-index-10);
+}
