--- a/src/ui/components/shared/Dropdown.css
+++ b/src/ui/components/shared/Dropdown.css
@@ -26,9 +26,9 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: 100;
   top: 0;
   left: 0;
+  z-index: var(--z-index-6--mask)
 }
 
 .dropdown-container .content {
@@ -39,10 +39,10 @@
   flex-direction: column;
   border-radius: 4px;
   position: absolute;
-  z-index: 200;
   box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px;
   background: var(--theme-toolbar-background);
   color: var(--theme-toolbar-color);
+  z-index: var(--z-index-7--dropdown)
 }
 
 .dropdown-container .content.top-right {
