Redesigned and fixed the Modal component

--- a/src/ui/components/Header/Header.css
+++ b/src/ui/components/Header/Header.css
@@ -133,6 +133,11 @@
   transition-duration: 300ms;
 }
 
+@keyframes dropdownFadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
 @media (max-width: 760px) {
   #header .title {
     width: 140px;
