--- a/src/ui/components/Account/Account.css
+++ b/src/ui/components/Account/Account.css
@@ -1,64 +1,5 @@
-.modal-container button .spinner {
-  display: none;
-  width: 1.5rem;
-  height: 1.5rem;
-  margin-inline-end: 1rem;
-  background-image: url(https://samherbert.net/svg-loaders/svg-loaders/oval.svg);
-  background-size: 100% 100%;
-  animation: spin 0.7s linear infinite;
-}
-
-.modal-container.clicked button .spinner {
-  display: block;
-}
-
-.modal-container button.jump {
-  animation: jump 0.5s linear alternate 3;
-  box-shadow: 0px 0px 5px 0px var(--light-grey);
-}
-
-.modal-container.clicked p {
-  opacity: 50%;
-  color: var(--light-grey);
-  transition-duration: 500ms;
-  transition-timing-function: ease;
-}
-
-.modal-container.clicked p.done {
-  opacity: 100%;
-  color: var(--dark-blue);
-}
-
-.modal-container .preview-container {
-  width: 400px;
-  height: 250px;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-@keyframes jump {
-  0% {
-    transform: translate(0, 0);
-  }
-  10% {
-    transform: translate(0, -6px);
-  }
-  30% {
-    transform: translate(0, -9px);
-  }
-  50% {
-    transform: translate(0, -10px);
-  }
-  70% {
-    transform: translate(0, -9px);
-  }
-  90% {
-    transform: translate(0, -6px);
-  }
-  100% {
-    transform: translate(0, 0px);
-  }
+.first-recording-prompt .prompt-container {
+  background: none;
 }
 
 .loading-message {
