--- a/src/ui/components/shared/Modal.css
+++ b/src/ui/components/shared/Modal.css
@@ -1,117 +1,50 @@
 .modal-container {
   position: absolute;
-  display: flex;
-  height: 100%;
   width: 100%;
-  max-height: 100%;
-  background: rgba(0,0,0,0.5);
+  height: 100%;
   z-index: var(--z-index-8--modal);
 }
 
-.modal-container.opaque {
-  background: linear-gradient(152.2deg, #67DAFF 6.75%, #4382FF 93.14%);
-}
-
-.modal-container.translucent {
-  background: linear-gradient(152.2deg, rgba(103, 218, 255, 0.90) 6.75%, rgba(67, 130, 255, 0.90) 93.14%);
-}
-
-.modal-container.error {
-  z-index: var(--z-index-10--fatal-error);
-}
-
-.modal-container .modal {
-  max-height: fit-content;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 8rem 5rem 5rem;
-  box-shadow: none;
-  transition: none;
-  margin: auto;
-  border-radius: 2rem;
-  background: white;
-  font-size: 1.25rem;
-  width: 640px;
-}
-
-.modal-container.error .modal {
-  min-height: 460px;
-  min-width: 640px;
-  border-radius: 2rem;
-  justify-content: center;
-}
-
-.modal-container.error .modal:not(.no-bg) {
-  background-image: url(https://svgshare.com/i/Q8u.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.modal-container .modal > *:not(button) {
+.modal-mask {
+  position: fixed;
   width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.2);
 }
 
-.modal-container .modal > *:not(:last-child) {
-  margin-bottom: 2rem;
-}
-
-.modal-container p, .modal-container li {
-  color: var(--dark-grey);
-  line-height: 1.5;
-}
-
-.modal-container ol {
-  text-align: left;
-}
-
-.modal-container button {
+.modal-content {
+  position: absolute;
   display: flex;
-  flex-direction: row;
-  padding: 1rem 2rem;
-  border-radius: 2rem;
-  align-items: center;
-  color: white;
-  background: var(--light-blue);
-  line-height: 1.5rem;
-  outline: none;
+  flex-direction: column;
+  height: max-content;
+  width: max-content;
+  min-width: 480px;
+  min-height: 480px;
+  border-radius: 8px;
+  padding: 20px;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: var(--theme-toolbar-background);
+  color: var(--theme-toolbar-color);
+  box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px;
+  animation: dropdownFadeIn ease 200ms;
+}
+
+.modal-close {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  padding: 8px;
+  border-radius: 4px;
   cursor: pointer;
 }
 
-.modal-container button:hover {
-  box-shadow: 0px 0px 5px 0px var(--light-grey);
-  background-color: var(--dark-blue);
-}
-
-.modal-container .modal button .content {
-  padding-top: 0.5px; 
-}
-
-.modal-container.error .modal {
-  text-align: center;
-}
-
-.modal-container.error .modal .tip {
-  color: var(--light-grey);
-  width: 75%;
-  font-size: 1.1rem;
-  line-height: 1.5;
-  background-image: "/images"
-}
-
-.modal-container.error .modal .tip .record {
-  margin: 0 .5rem;
-  border: 1px solid var(--faint-red);
-  padding: 2px 5px;
-  border-radius: 5px;
-  font-size: .8rem;
-  vertical-align: text-bottom;
-  color: var(--faint-red)
-}
-
-.modal-container.error .modal button .img.refresh {
-  margin-inline-end: .5em;
-  background-color: white;
+@keyframes modalFadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
 }
