--- a/src/ui/components/shared/Dropdown.css
+++ b/src/ui/components/shared/Dropdown.css
@@ -14,6 +14,17 @@
   line-height: 16px;
 }
 
+.dropdown-wrapper button.secondary {
+  color: var(--dark-blue);
+  border: 1px solid var(--dark-blue);
+  padding: 7px 11px;
+  background: none;
+}
+
+.dropdown-wrapper button.secondary .img {
+  background: var(--dark-blue);
+}
+
 .dropdown-wrapper button .img:not(:last-child) {
   margin-right: 4px;
 }
@@ -72,6 +83,10 @@
   border-radius: 4px;
   right: -4px;
   top: 48px;
+}
+
+.dropdown-container .row.clickable {
+  padding: 0px;
 }
 
 .dropdown-container .row:hover {
