--- a/src/devtools/client/themes/webconsole.css
+++ b/src/devtools/client/themes/webconsole.css
@@ -1050,7 +1050,7 @@ a.learn-more-link.webconsole-learn-more-link {
 
 /* Hovered Overlay buttons */
 
-.message:hover .button {
+.message:not(.command):not(.result):hover .button {
   margin-left: calc(0px - var(--message-left-padding));
 }
 
