--- a/src/devtools/client/debugger/src/components/Editor/Panel.css
+++ b/src/devtools/client/debugger/src/components/Editor/Panel.css
@@ -4,21 +4,24 @@
 
 .breakpoint-panel {
   cursor: initial;
-  margin: 1em 0;
   position: relative;
   display: flex;
   flex-direction: column;
+  margin: 8px 0 8px 12px;
+  padding: 8px 12px;
   background: var(--theme-toolbar-background);
   border-top: 1px solid var(--theme-splitter-color);
   border-bottom: 1px solid var(--theme-splitter-color);
-  margin-left: 12px;
   border-radius: 4px;
   border: 1px solid var(--theme-splitter-color);
   width: 500px;
-  padding: 12px;
   font-family: sans-serif;
   line-height: 16px;
   color: var(--theme-toolbar-color);
+}
+
+.breakpoint-panel.editing {
+  padding: 12px;
 }
 
 .breakpoint-panel button {
