--- a/src/ui/components/RightSidebar/RightSidebar.css
+++ b/src/ui/components/RightSidebar/RightSidebar.css
@@ -7,12 +7,19 @@
   flex-shrink: 0;
 }
 
-.right-sidebar .drawer .buttons {
+.right-sidebar .drawer {
+  padding: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.right-sidebar .drawer-buttons {
   display: flex;
   flex-direction: column;
 }
 
-.right-sidebar .drawer button {
+.right-sidebar .drawer-buttons button {
   border: 4px solid transparent;
   border-radius: 8px;
   cursor: pointer;
@@ -23,24 +30,27 @@
   width: 20px;
   height: 20px;
 }
-.right-sidebar .drawer {
-  padding: 8px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
 
 .right-sidebar .drawer:not(:only-child) {
   border-left: 1px solid var(--theme-splitter-color);
 }
 
+.right-sidebar button:focus {
+  outline: none;
+  background-color: inherit;
+}
+
 .right-sidebar .drawer button:hover,
-.right-sidebar.expanded .drawer button,
-.right-sidebar.expanded .drawer button:focus {
+.right-sidebar .drawer button.expanded {
   background: var(--grey-20);
 }
 
-.right-sidebar .drawer button:focus {
-  outline: 0;
-  background-color: transparent;
+.right-sidebar .drawer .tooltip {
+  position: absolute;
+  right: 52px;
+  padding: 8px 12px;
+  border-radius: 4px;
+  color: white;
+  background: var(--theme-icon-color);
+  transition: 200ms;
 }
