--- a/src/devtools/client/debugger/src/components/PrimaryPanes/Outline.css
+++ b/src/devtools/client/debugger/src/components/PrimaryPanes/Outline.css
@@ -6,6 +6,12 @@
   overflow-y: hidden;
 }
 
+.outline__container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .outline > div {
   width: 100%;
   position: relative;
@@ -30,6 +36,7 @@
 }
 
 .outline-list {
+  height: 100%;
   margin: 0;
   padding: 0 0 4px 0;
   bottom: 25px;
@@ -121,11 +128,8 @@
 .outline-footer {
   display: flex;
   box-sizing: border-box;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 25px;
+  min-height: 25px;
+  flex-grow: 0;
   background: var(--theme-body-background);
   border-top: 1px solid var(--theme-splitter-color);
   opacity: 1;
@@ -137,7 +141,13 @@
   color: var(--theme-body-color);
 }
 
-.outline-footer button.active {
+.sort-button {
+  cursor: pointer;
+  padding: 0 1em;
+  transition: background-color 0.2s ease-out;
+}
+
+.outline-footer .sort-button--active {
   background: var(--theme-selection-background);
   color: var(--theme-selection-color);
 }
