--- a/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
+++ b/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
@@ -38,29 +38,13 @@
   cursor: pointer;
 }
 
-.breakpoint-panel > *:not(:last-child) {
-  margin-bottom: 8px;
-}
-
-.breakpoint-panel .header {
-  display: flex;
-}
-
-.breakpoint-panel .header .type {
-  margin-right: 4px;
-}
-
-.breakpoint-panel .header .line {
-  margin-right: 8px;
-}
-
 .breakpoint-panel .summary {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.breakpoint-panel .summary .preview {
+.breakpoint-panel .summary .options {
   font-family: var(--monospace-font-family);
   display: flex;
   flex-direction: row;
@@ -88,6 +72,22 @@
   color: var(--dark-blue);
 }
 
+.breakpoint-panel .panel-editor > *:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.breakpoint-panel .header {
+  display: flex;
+}
+
+.breakpoint-panel .header .type {
+  margin-right: 4px;
+}
+
+.breakpoint-panel .header .line {
+  margin-right: 8px;
+}
+
 .breakpoint-panel form {
   display: flex;
   flex-direction: column;
@@ -110,17 +110,30 @@
   flex-direction: row;
 }
 
-.breakpoint-panel form input[type="text"] {
+.breakpoint-panel form .CodeMirror {
   display: flex;
   width: 100%;
   background-color: white;
   line-height: 16px;
-  padding: 4px;
   border-radius: 4px;
   font-family: var(--monospace-font-family);
   font-size: 1rem;
   border: 1px solid var(--theme-splitter-color);
   color: var(--theme-toolbar-color);
+}
+
+.breakpoint-panel form textarea {
+  width: 100%;
+  height: 26px;
+  resize: none;
+  background-color: white;
+  border: 1px solid var(--theme-splitter-color);
+  border-radius: 4px;
+}
+
+.breakpoint-panel .CodeMirror-scroll {
+  display: flex;
+  flex-grow: 1;
 }
 
 .breakpoint-panel .input-container > *:not(:last-child) {
@@ -154,11 +167,11 @@
 
 /* Conditional Logpoint Panel styling */
 
-.breakpoint-panel.conditional .input-container {
+.panel-editor.conditional .input-container {
   display: flex;
   flex-direction: column;
 }
 
-.breakpoint-panel.conditional .edit-actions {
+.panel-editor.conditional .edit-actions {
   margin-top: 8px;
 }
