--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,8 @@
   height: 100%;
   --light-grey: #969696;
   --dark-grey: #696969;
-  --light-blue: #61CDFF;
-  --dark-blue: #2D7EFF;
+  --light-blue: #61cdff;
+  --dark-blue: #2d7eff;
   --faint-red: rgba(255, 0, 0, 0.5);
 }
 
