--- a/src/devtools/client/debugger/src/components/SecondaryPanes/EventListeners.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/EventListeners.css
@@ -81,11 +81,7 @@
 }
 
 .event-listeners-list .event-listener-event {
-  margin-inline-start: 40px;
-}
-
-.event-search-results-list .event-listener-event {
-  padding-inline: 20px;
+  margin-inline-start: 20px;
 }
 
 .event-listener-name {
@@ -94,14 +90,13 @@
 }
 
 .event-listener-event input {
-  margin-inline: 0 4px;
-  margin-block: 0;
+  margin-inline-end: 4px;
 }
 
 .event-search-container {
   display: flex;
-  border: 1px solid transparent;
-  border-block-end: 1px solid var(--theme-splitter-color);
+  margin-bottom: 10px;
+  position: relative;
 }
 
 .event-search-form {
@@ -113,34 +108,19 @@
   flex-grow: 1;
   margin: 0;
   font-size: inherit;
-  background-color: var(--theme-sidebar-background);
   border: 0;
   outline: 0;
   line-height: 16px;
-  padding-block: 2px;
   color: var(--theme-body-color);
-  background-image: url("chrome://devtools/skin/images/filter-small.svg");
-  background-position-x: 4px;
-  background-position-y: 50%;
-  background-repeat: no-repeat;
-  background-size: 12px;
   -moz-context-properties: fill;
   fill: var(--theme-icon-dimmed-color);
   text-align: match-parent;
-}
-
-:root:dir(ltr) .event-search-input {
-  /* Be explicit about left/right direction to prevent the text/placeholder
-   * from overlapping the background image when the user changes the text
-   * direction manually (e.g. via Ctrl+Shift). */
-  padding-left: 19px;
-  padding-right: 12px;
-}
-
-:root:dir(rtl) .event-search-input {
-  background-position-x: right 4px;
-  padding-right: 19px;
-  padding-left: 12px;
+  background-color: #EEE;
+  border-radius: 4px;
+  background-color: #EEE;
+  line-height: 16px;
+  padding: 8px;
+  border-radius: 4px;
 }
 
 .category-label {
@@ -152,10 +132,13 @@
   color: var(--theme-comment);
 }
 
-.event-search-container:focus-within {
+.event-search-input:focus {
   border: 1px solid var(--theme-highlight-blue);
+  padding: 7px;
 }
 
 .devtools-searchinput-clear {
+  position: absolute;
+  right: 0px;
   margin-inline-end: 8px;
 }
