--- a/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoints.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoints.css
@@ -245,3 +245,7 @@ html .breakpoints-list .breakpoint.paused {
   padding-top: 1px;
 }
 
+.button-prev {
+  transform: rotate(180deg);
+  cursor: pointer;
+}
